--- a/src/pages/buyers/Buyers.module.css
+++ b/src/pages/buyers/Buyers.module.css
@@ -19,3 +19,8 @@
 .content :last-child {
   margin-bottom: 0;
 }
+.container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+}
