--- a/src/pages/buyers/Buyers.module.css
+++ b/src/pages/buyers/Buyers.module.css
@@ -21,6 +21,6 @@
 }
 .container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 1rem;
 }
